--- a/app/assets/stylesheets/actiontext-lexical.css
+++ b/app/assets/stylesheets/actiontext-lexical.css
@@ -12,6 +12,25 @@ lexical-editor {
   }
 }
 
+.lexical-dialog-actions {
+  display: flex;
+  font-size: var(--text-x-small);
+  flex: 1 1 0%;
+  gap: var(--inline-space-half);
+  margin-block-start: var(--block-space-half);
+
+  .btn {
+    --radius: 0.3em;
+
+    inline-size: 100%;
+    justify-content: center;
+  }
+
+  span {
+    inline-size: 100%;
+  }
+}
+
 .lexical-editor__content {
   --outline-size: max(2px, 0.08em);
 
@@ -37,15 +56,6 @@ lexical-editor {
   outline: 2px dashed var(--color-selected-dark);
 }
 
-#link-dialog {
-  background-color: var(--color-canvas);
-  border: 1px solid var(--color-ink-lighter);
-  border-radius: 0.5em;
-  box-shadow: var(--shadow);
-  color: var(--color-ink);
-  padding: var(--block-space-half) var(--inline-space);
-}
-
 lexical-toolbar {
   background-color: inherit;
   border-block-end: 1px solid var(--color-ink-light);
@@ -58,10 +68,16 @@ lexical-toolbar {
   position: relative;
 
   dialog {
+    background-color: var(--color-canvas);
+    border: 1px solid var(--color-ink-lighter);
+    border-radius: 0.5em;
+    box-shadow: var(--shadow);
+    color: var(--color-ink);
+    padding: var(--block-space) calc(var(--inline-space) * 1.5);
     position: absolute;
   }
 
-  button {
+  > button {
     aspect-ratio: 4/3.5;
     appearance: none;
     background-color: transparent;
